# ops-core

./: .gitignore  README.md  TASK.md  TASK_4_2_FIX_PLAN.md  alembic.ini  alphabetical_states.py  code_generator.py  debugger.py  debugging_plan_agent_registration.md  deployer.py  docker-compose.real-agentkit.yml  docker-compose.yml  integration_test_plan_task_4.2.md  integrator.py  load_test_results.txt  load_test_results_scenario1_full.txt  load_test_results_scenario2_full.txt  load_test_scenario_2_fix_plan.md  load_testing_debugging_details.md  load_testing_debugging_summary.md  load_testing_plan.md  locust_report.html  locust_report_failures.csv  locust_report_stats.csv  locust_report_stats_history.csv  locust_scenario_1_minimal_load_run.txt  locust_scenario_1_output.txt  locust_scenario_1_short_run.txt  locust_scenario_2_output.txt  main.py  monitor.py  opscore_registration_logs.txt  pyproject.toml  requirements.txt  simple_script.py  states.py  task_interpreter.py  tester.py  tox.ini  user_input.py
LabWork/Workspace/7-moltools/1-trials/: .gitignore  CONTRIBUTING.md  DesignDoc.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  REPO_ORGANIZATION.md  completed_tasks.txt  file_structures.txt  profile_3nec.py  requirements.txt  run_integration_tests.sh  run_tests.py  setup.cfg  setup.py  tasks.txt
LabWork/Workspace/7-moltools/1-trials/.github/: PULL_REQUEST_TEMPLATE.md
LabWork/Workspace/7-moltools/1-trials/benchmarks/: performance_comparison.py
LabWork/Workspace/7-moltools/1-trials/docs/: index.md
LabWork/Workspace/7-moltools/1-trials/moltools/: cli.py  (+4 more)
(+247 files in other folders)
