[metadata]
name = moltools
version = 0.2.0
description = Tools for processing molecular data files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/example/moltools
author = MolTools Team
author_email = author@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy

[options.entry_points]
console_scripts =
    moltools = moltools.cli:main
